# cjm-transcript-graph-schema

./: .gitignore  README.md  index.html  index.html.md  pyproject.toml  robots.txt  schema.html  schema.html.md  search.json  sitemap.xml
cjm_transcript_graph_schema/: _modidx.py  schema.py
nbs/: index.ipynb  nbdev.yml  schema.ipynb
tests/: test_schema.py
